# dicetest-examples

./: Cargo.toml  LICENSE-MIT  README.md
src/: guide.rs  lib.rs  main.rs  readme.rs
src/guide/: section_dice.rs  section_hints.rs  section_pseudorandomness.rs  section_stats.rs  section_tests.rs
src/readme/: simple_example.rs
